k8s/deployment-sidekiq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clara-bornan-sidekiq
  namespace: client-saas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clara-bornan-sidekiq
  template:
    metadata:
      labels:
        app: clara-bornan-sidekiq
    spec:
      containers:
        - name: sidekiq
          image: bornan.azurecr.io/clara-bornan:latest
          imagePullPolicy: Always
          args: ["bundle","exec","sidekiq","-C","config/sidekiq.yml"]
          resources:
            requests:
              cpu: "100m"
              memory: "400Mi"
            limits:
              cpu: "300m"
              memory: "1Gi"
