k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clara-bornan
  namespace: client-saas
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: clara-bornan
  template:
    metadata:
      labels:
        app: clara-bornan
    spec:
      containers:
        - name: clara-bornan
          image: bornan.azurecr.io/clara-bornan:latest
          imagePullPolicy: Always
          command: ["/bin/sh", "docker/entrypoints/rails.sh"]
          args: ["bundle", "exec", "rails", "s", "-p", "3000", "-b", "0.0.0.0"]
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "400Mi"
            limits:
              cpu: "300m"
              memory: "1Gi"
          startupProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 30
            periodSeconds: 10
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 45
            periodSeconds: 30
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 120
            timeoutSeconds: 5
            failureThreshold: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clara-bornan-sidekiq
  namespace: client-saas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clara-bornan-sidekiq
  template:
    metadata:
      labels:
        app: clara-bornan-sidekiq
    spec:
      containers:
        - name: chatwoot-sidekiq
          image: bornan.azurecr.io/clara-bornan:latest
          imagePullPolicy: Always
          command: ["/bin/sh", "docker/entrypoints/rails.sh"]
          args: ["bundle", "exec", "sidekiq", "-C", "config/sidekiq.yml"]
          resources:
            requests:
              cpu: "100m"
              memory: "400Mi"
            limits:
              cpu: "300m"
              memory: "1Gi"
