k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clara-bornan
  namespace: client-saas
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/enable-real-ip: "true"
    nginx.ingress.kubernetes.io/real-ip-header: "CF-Connecting-IP"
    nginx.ingress.kubernetes.io/use-proxy-protocol: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - chat.bornan.com.br
      secretName: certificate-clara-bornan
  rules:
    - host: chat.bornan.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clara-bornan
                port:
                  number: 3000
